--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,20 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+ *= require sb-admin-2.min
+ *= require bootstrap-social
+ *= require dataTables.bootstrap
+ *= require dataTables.bootstrap4
+ *= require dataTables.foundation
+ *= require dataTables.jqueryui
+ *= require dataTables.material
+ *= require dataTables.semanticui
+ *= require dataTables.uikit
+ *= require jquery.dataTables
+ *= require jquery.dataTables_themeroller
+ *= require dataTables.responsive
+ *= require metisMenu
+ *= require font-awesome
  *= require_tree .
  *= require_self
  */
