--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
   </head>
 
   <body>
+    <h3 class="notice"><%= notice %></h3>
+    <h3 class="alert"><%= alert %></h3>
     <%= yield %>
   </body>
 </html>
