--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,7 +10,7 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require sb-admin-2.min
+ *= require sb-admin-2
  *= require bootstrap-social
  *= require dataTables.bootstrap
  *= require dataTables.bootstrap4
