--- a/app/views/donors/index.html.erb
+++ b/app/views/donors/index.html.erb
@@ -1,13 +1,13 @@
 <h1>This is the root!</h1>
 
+<% if donor_signed_in?%>
+  <div><%= link_to "Sign Out", destroy_donor_session_path, :method => :delete %></div>
 
-<div><%= link_to "Create New Account", new_donor_registration_path %></div>
+<% else %>
+  <div><%= link_to "Create New Account", new_donor_registration_path %></div>
 
-<div><%= link_to "Existing Users", new_donor_session_path %></div>
-
-<div><%= link_to "Sign Out", destroy_donor_session_path, :method => :delete %></div>
-
-
+  <div><%= link_to "Sign In", new_donor_session_path %></div>
+<% end %>
         <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
