created a pickup request form that records the request via the food pickup table along with a join table that associates each donor with a pickup

--- a/app/views/donors/index.html.erb
+++ b/app/views/donors/index.html.erb
@@ -2,7 +2,7 @@
 
 <% if donor_signed_in?%>
   <div><%= link_to "Sign Out", destroy_donor_session_path, :method => :delete %></div>
-
+  <div><%= link_to "Create a new pickup", "/new-pickup", :method => :get %></div>
 <% else %>
   <div><%= link_to "Create New Account", new_donor_registration_path %></div>
 
