added admin method to application controller and before action to profile controller and logic to approve button

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -26,7 +26,9 @@
 
 
 <div>
+  <% if !@donor.approved %>
   <%= button_to "Approve", "/profiles/#{@donor.id}", {method: :patch, class: "btn btn-success"} %>
+  <% end %>
 </div>
 
 <div>
