--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">SB Admin v2.0</a>
+            <a class="navbar-brand" href="/">Rescue Leftover Cuisine</a>
         </div>
         <!-- /.navbar-header -->
         <ul class="nav navbar-top-links navbar-inline navbar-right">
@@ -216,15 +216,24 @@
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                     <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
                 </a>
+                <% if donor_signed_in?%>
                 <ul class="dropdown-menu dropdown-user">
-                    <li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
+                    <li><%= link_to "Update User Profile", edit_donor_registration_path %>
                     </li>
-                    <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
+                    <li><a href="/new-pickup">Create New Pickup</a>
                     </li>
                     <li class="divider"></li>
-                    <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                    <li><%= link_to "Log Out", destroy_donor_session_path, :method => :delete %>
                     </li>
                 </ul>
+                <% else %>
+                <ul class="dropdown-menu dropdown-user">
+                    <li><%= link_to "Log In", new_donor_session_path %>
+                    </li>
+                    <li><%= link_to "Create New Account", new_donor_registration_path %>
+                    </li>
+                </ul>
+                <% end %>
                 <!-- /.dropdown-user -->
             </li>
             <!-- /.dropdown -->
@@ -232,8 +241,8 @@
         <!-- /.navbar-top-links -->
         <!-- /.navbar-static-side -->
     </nav>
-    <h3 class="notice"><%= notice %></h3>
-    <h3 class="alert"><%= alert %></h3>
+    <!-- <h3 class="notice"><%= notice %></h3>
+    <h3 class="alert"><%= alert %></h3> -->
 
     <% flash.each do |name, message| %>
      <div class="alert alert-<%= name %> alert-dismissible" role="alert">
@@ -250,7 +259,7 @@
        <% end %>
      </div>
     <% end %>
-    
+
     <%= yield %>
 
   </body>
