--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -32,14 +32,14 @@
 
                             <tbody>
                                 <tr class="odd gradeX" ng-repeat='donor in unapprovedDonors'>
-                                  <td>{{donor.created_at}}</td>
-                                  <td>{{donor.business_name}}</td>
+                                  <td>{{donor.created_at | date:'fullDate'}}</td>
+                                  <td><a href="/profiles/{{donor.id}}">{{donor.business_name}}</a></td>
                                   <td>{{donor.type_of_donor}}</td>
                                   <td>{{donor.contact_name}}</td>
                                   <td>{{donor.phone_number}}</td>
                                   <td>{{donor.email}}</td>
                                   <td>{{donor.address}}</td>
-                                  <td class='btn btn-warning' ng-click="toggleApprove(donor)"> {{"Pending"}}</td>
+                                  <td class='btn btn-warning' ng-click="toggleApprove(donor)"> {{"Pending - Click to Approve"}}</td>
                                 </tr>
 
 
@@ -63,7 +63,7 @@
                             <tbody>
                                 <tr class="odd gradeX" ng-repeat='donor in approvedDonors'>
                                   <td>{{donor.created_at | date:'fullDate'}}</td>
-                                  <td>{{donor.business_name}}</td>
+                                  <td><a href="/profiles/{{donor.id}}">{{donor.business_name}}</a></td>
                                   <td>{{donor.type_of_donor}}</td>
                                   <td>{{donor.contact_name}}</td>
                                   <td>{{donor.phone_number}}</td>
