--- a/app/views/donors/index.html.erb
+++ b/app/views/donors/index.html.erb
@@ -3,7 +3,7 @@
         <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">Profile for: <%= @donor.business_name %></h1>
+                    <h1 class="page-header">Profile for: <%= current_donor.business_name %></h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
