cleaned up div elements and tables

--- a/app/views/donors/admin_index.html.erb
+++ b/app/views/donors/admin_index.html.erb
@@ -60,7 +60,7 @@
                 <div class="panel-heading">
                     <i class="fa fa-bar-chart-o fa-fw"></i> Pending Donor Profiles
                 </div>
-                <!-- /.panel-heading -->
+                <!-- /.panel-heading First Table -->
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-lg-12">
@@ -96,15 +96,58 @@
                         </div>
                       </div>
                         <!-- /.col-lg-4 (nested) -->
-                        <div class="col-lg-8">
-                            <div id="morris-bar-chart"></div>
+
+                  </div>
+                        <!-- /.col-lg-8 (nested) -->
+              </div>
+            <!-- /.panel -->
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <i class="fa fa-bar-chart-o fa-fw"></i> Pending Pickup Request
+                </div>
+                <!-- /.panel-heading -->
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="table-responsive">
+                                <table class="table table-bordered table-hover table-striped">
+                                    <thead>
+                                        <tr>
+                                            <th>Picture</th>
+                                            <th>Description</th>
+                                            <th>Quantity</th>
+                                            <th>Start time</th>
+                                            <th>End time</th>
+                                            <th>Location</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td> picture</td>
+                                            <td> description</td>
+                                            <td> quantity</td>
+                                            <td> start_time</td>
+                                            <td> end_time</td>
+                                            <td> location</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                            <!-- /.table-responsive -->
                         </div>
-                    </div>
+                        <!-- /.col-lg-4 (nested) -->
                         <!-- /.col-lg-8 (nested) -->
                     </div>
                     <!-- /.row -->
                 </div>
                 <!-- /.panel-body -->
+            </div>
+
+          <!-- /.row -->
+        </div>
+                        <!-- /.panel-body -->
+          <div class="panel-body">
+              <div class="row">
                 <div class="col-lg-4">
                     <div class="panel panel-default">
                         <div class="panel-heading">
@@ -164,55 +207,11 @@
                         </div>
                         <!-- /.panel-body -->
                     </div>
-                    </div>
-
-        <div class="col-lg-8">
-            <!-- /.panel -->
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <i class="fa fa-bar-chart-o fa-fw"></i> Pending Pickup Request
                 </div>
-                <!-- /.panel-heading -->
-                <div class="panel-body">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="table-responsive">
-                                <table class="table table-bordered table-hover table-striped">
-                                    <thead>
-                                        <tr>
-                                            <th>Picture</th>
-                                            <th>Description</th>
-                                            <th>Quantity</th>
-                                            <th>Start time</th>
-                                            <th>End time</th>
-                                            <th>Location</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td> picture</td>
-                                            <td> description</td>
-                                            <td> quantity</td>
-                                            <td> start_time</td>
-                                            <td> end_time</td>
-                                            <td> location</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                            <!-- /.table-responsive -->
-                        </div>
-                        <!-- /.col-lg-4 (nested) -->
-                        <div class="col-lg-8">
-                            <div id="morris-bar-chart"></div>
-                        </div>
-                        <!-- /.col-lg-8 (nested) -->
-                    </div>
-                    <!-- /.row -->
-                </div>
-                <!-- /.panel-body -->
-            </div>
+              </div>
           </div>
+
+
             <!-- /.panel -->
 
             <!-- /.panel -->
