--- a/app/views/donors/admin_index.html.erb
+++ b/app/views/donors/admin_index.html.erb
@@ -1,4 +1,4 @@
-<div id="page-wrapper">
+<div id="page-wrapper" ng-controller="profileCtrl">
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header">Welcome Rescuing Leftover Cuisine Admin</h1>
@@ -64,7 +64,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-lg-12">
-                            <div class="table-responsive">
+                            <div class="table-responsive" >
                                 <table class="table table-bordered table-hover table-striped">
                                     <thead>
                                       <tr>
@@ -78,9 +78,9 @@
                                           <th>Status</th>
                                       </tr>
                                     </thead>
-                                    <tbody>
+                                    <tbody ng-init="getProfiles()">
                                       <tr class="odd gradeX" ng-repeat='donor in unapprovedDonors'>
-                                        <td>{{donor.created_at | date:'fullDate'}}</td>
+                                        <td>{{donor.created_at | date:'shortDate'}}</td>
                                         <td><a href="/profiles/{{donor.id}}">{{donor.business_name}}</a></td>
                                         <td>{{donor.type_of_donor}}</td>
                                         <td>{{donor.contact_name}}</td>
@@ -103,7 +103,7 @@
             <!-- /.panel -->
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <i class="fa fa-bar-chart-o fa-fw"></i> Pending Pickup Request
+                    <i class="fa fa-bar-chart-o fa-fw"></i> Pending Pickup Requests
                 </div>
                 <!-- /.panel-heading -->
                 <div class="panel-body">
@@ -121,14 +121,15 @@
                                             <th>Location</th>
                                         </tr>
                                     </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td> picture</td>
-                                            <td> description</td>
-                                            <td> quantity</td>
-                                            <td> start_time</td>
-                                            <td> end_time</td>
-                                            <td> location</td>
+                                    <tbody ng-init="adminFoodPickups()">
+                                        <tr class="odd gradeX" ng-repeat='pickup in unapprovedPickups'>
+                                            <td>{{pickup.approved}}</td>
+                                            <td>{{pickup.picture}}</td>
+                                            <td>{{pickup.description}}</td>
+                                            <td>{{pickup.quantity}}</td>
+                                            <td>{{pickup.start_time | date:'short'}}</td>
+                                            <td>{{pickup.end_time | date:'short'}}</td>
+                                            <td>{{pickup.location}}</td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -137,15 +138,51 @@
                         </div>
                         <!-- /.col-lg-4 (nested) -->
                         <!-- /.col-lg-8 (nested) -->
-                    </div>
-                    <!-- /.row -->
+                    </div> <!-- /.row -->
+                </div> <!-- /.panel-body -->
+            </div> <!-- /.panel-default -->
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <i class="fa fa-bar-chart-o fa-fw"></i> Approved Pickup Requests
                 </div>
-                <!-- /.panel-body -->
-            </div>
+                <!-- /.panel-heading -->
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="table-responsive">
+                                <table class="table table-bordered table-hover table-striped">
+                                    <thead>
+                                        <tr>
+                                            <th>Picture</th>
+                                            <th>Description</th>
+                                            <th>Quantity</th>
+                                            <th>Start time</th>
+                                            <th>End time</th>
+                                            <th>Location</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody ng-init="adminFoodPickups()">
+                                        <tr class="odd gradeX" ng-repeat='pickup in approvedPickups'>
+                                            <td>{{pickup.approved}}</td>
+                                            <td>{{pickup.picture}}</td>
+                                            <td>{{pickup.description}}</td>
+                                            <td>{{pickup.quantity}}</td>
+                                            <td>{{pickup.start_time | date:'short'}}</td>
+                                            <td>{{pickup.end_time | date:'short'}}</td>
+                                            <td>{{pickup.location}}</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                            <!-- /.table-responsive -->
+                        </div>
+                        <!-- /.col-lg-4 (nested) -->
+                        <!-- /.col-lg-8 (nested) -->
+                    </div> <!-- /.row -->
+                </div> <!-- /.panel-body -->
+            </div> <!-- /.panel-default -->
 
-          <!-- /.row -->
         </div>
-                        <!-- /.panel-body -->
           <div class="panel-body">
               <div class="row">
                 <div class="col-lg-4">
@@ -153,7 +190,7 @@
                         <div class="panel-heading">
                             <i class="fa fa-bell fa-fw"></i> Notifications Panel
                         </div>
-                        <!-- /.panel-heading -->
+
                         <div class="panel-body">
                             <div class="list-group">
                                 <a href="#" class="list-group-item">
