--- a/app/views/donors/index.html.erb
+++ b/app/views/donors/index.html.erb
@@ -131,6 +131,7 @@
                                             <td><%= pickup.start_time %></td>
                                             <td><%= pickup.end_time %></td>
                                             <td><%= pickup.location %></td>
+                                            <td><%= link_to "Use Pick-up", "/pickup/#{pickup.id}" %></td>
                                         </tr>
                                         <% end %>
                                     </tbody>
