--- a/app/views/food_pickups/new.html.erb
+++ b/app/views/food_pickups/new.html.erb
@@ -42,6 +42,11 @@
   <%= datetime_field_tag :end_time %>
 </div>
 
+<div class="field">
+  <%= label_tag "Reoccurs:" %><br />
+  <%= select_tag "reoccurrence", options_for_select(["None", "Daily", "Weekly", "Monthly", "Yearly"]) %>
+</div>
+
 <%= submit_tag "Submit" %>
 
 <% end %>
