--- a/app/views/food_pickups/new.html.erb
+++ b/app/views/food_pickups/new.html.erb
@@ -1,6 +1,5 @@
 <%= form_tag("/new-pickup", method: "post") do %>
 
-
 <div class="field">
   <%= label_tag :picture %><br />
   <%= text_field_tag :picture %>
@@ -45,6 +44,22 @@
 <div class="field">
   <%= label_tag "Reoccurs:" %><br />
   <%= select_tag "reoccurrence", options_for_select(["None", "Daily", "Weekly", "Monthly", "Yearly"]) %>
+</div>
+
+<div>
+  <% if current_donor.type_of_donor == 'Event Company' %>
+    <%= label_tag "Number of guests" %><br />
+    <%= number_field_tag :number, nil, min: 100 %>
+  <% elsif current_donor.type_of_donor == 'Office' %>
+    <%= label_tag "Pick-up Cost" %><br />
+    <%= text_field_tag :number, 20, :readonly => true %>
+  <% elsif current_donor.type_of_donor == 'Restaurant' %>
+    <%= label_tag "Pick-up Cost" %><br />
+    <%= text_field_tag :number, 10, :readonly => true %>
+  <% else %>
+    <%= label_tag "Pick-up Cost" %><br />
+    <%= text_field_tag :number, 100, :readonly => true %>
+  <% end %>
 </div>
 
 <%= submit_tag "Submit" %>
