--- a/app/views/donors/new_payment.html.erb
+++ b/app/views/donors/new_payment.html.erb
@@ -1,7 +1,7 @@
 <form action="/donors/payment" method="POST">
   <script
     src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-    data-key="pk_test_tWQeOA5qD5d6vJ7ns6rr5Nvc"
+    data-key="<%= Rails.application.secrets.stripe_publishable_key %>"
     data-name="Stripe.com"
     data-description="Widget"
     data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
