--- a/app/views/volunteers/index.html.erb
+++ b/app/views/volunteers/index.html.erb
@@ -20,8 +20,8 @@
                                         <th>Zip Code</th>
                                         <th>Phone Number</th>
                                         <th>Email</th>
-                                        <th></th>
-                                        <th></th>
+                                        <th>Edit</th>
+                                        <th>Archive Volunteer</th>
                                         <th></th>
                                     </tr>
                                 </thead>
