--- a/app/views/donors/index.html.erb
+++ b/app/views/donors/index.html.erb
@@ -1,64 +1,21 @@
-    <div class="row">
-        <div class="col-lg-12">
-            <h1 class="page-header">Profile for: <%= current_donor.business_name %></h1>
-        </div>
-    </div>
-    <!-- /.row Comments, tasks, pickup requests, support tickets boxes -->
-    <div class="row">
+
+<div class="row">
+  <div class="col-lg-8">
+      <h1 class="page-header">Profile for: <%= current_donor.business_name %></h1>
+      <img src="http://www.rescuingleftovercuisine.org/assets/RLC_LOGO-900fcd5d7d719b63e43d29ac23775f74f17100194e2690e17833a091b016da85.png" alt="">
+  </div>
+  <!-- /.col-lg-12 -->
+</div>
       <div class="col-lg-3 col-md-6">
           <div class="panel panel-green">
               <div class="panel-heading">
                   <div class="row">
                       <div class="col-xs-3">
-                          <i class="fa fa-tasks fa-5x"></i>
+                          <i class="fa fa-shopping-cart fa-5x"></i>
                       </div>
                       <div class="col-xs-9 text-right">
-                          <div class="huge"> </div>
-                          <div>New Donor Profiles!</div>
-                      </div>
-                  </div>
-              </div>
-              <a href="#">
-                  <div class="panel-footer">
-                      <!-- <span class="pull-left">View Profiles</span> -->
-                      <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                      <div class="clearfix"></div>
-                  </div>
-              </a>
-          </div>
-      </div>
-        <div class="col-lg-3 col-md-6">
-            <div class="panel panel-primary">
-                <div class="panel-heading">
-                    <div class="row">
-                        <div class="col-xs-3">
-                            <i class="fa fa-comments fa-5x"></i>
-                        </div>
-                        <div class="col-xs-9 text-right">
-                            <div class="huge">26</div>
-                            <div>New Comments!</div>
-                        </div>
-                    </div>
-                </div>
-                <a href="#">
-                    <div class="panel-footer">
-                        <span class="pull-left">View Details</span>
-                        <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                        <div class="clearfix"></div>
-                    </div>
-                </a>
-            </div>
-        </div>
-      <div class="col-lg-3 col-md-6">
-          <div class="panel panel-green">
-              <div class="panel-heading">
-                  <div class="row">
-                      <div class="col-xs-3">
-                          <i class="fa fa-tasks fa-5x"></i>
-                      </div>
-                      <div class="col-xs-9 text-right">
-                          <div class="huge">12</div>
-                          <div>New Tasks!</div>
+                          <div class="huge"><%= @donors_approved_pickups %></div>
+                          <div>Approved Pickups!</div>
                       </div>
                   </div>
               </div>
@@ -79,8 +36,8 @@
                           <i class="fa fa-shopping-cart fa-5x"></i>
                       </div>
                       <div class="col-xs-9 text-right">
-                          <div class="huge">124</div>
-                          <div>New Pickup Requests!</div>
+                          <div class="huge"><%= @donors_unapproved_pickups %></div>
+                          <div>Unapproved Pickups!</div>
                       </div>
                   </div>
               </div>
@@ -98,11 +55,11 @@
               <div class="panel-heading">
                   <div class="row">
                       <div class="col-xs-3">
-                          <i class="fa fa-support fa-5x"></i>
+                          <i class="fa fa-tasks fa-5x"></i>
                       </div>
                       <div class="col-xs-9 text-right">
-                          <div class="huge">13</div>
-                          <div>Support Tickets!</div>
+                          <div class="huge">0</div>
+                          <div>Notifications!</div>
                       </div>
                   </div>
               </div>
@@ -182,3 +139,7 @@
         <!-- /.col-lg-4 -->
     </div>
     <!-- /.row -->
+        <!-- /.col-lg-8
+    </div>
+    <!/.row -->
+</div>
