Donor charge now displays on their profile based on type of business and the checkbox on their profile edit toggles the negotiable attribute

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -34,6 +34,12 @@
     <%= f.email_field :email, autofocus: true %>
   </div>
 
+  <div class="field">
+    <p>Your current charge is: <%= number_to_currency(current_donor.charge) %></p>
+    <%= f.label :negotiable, "I want to negotiate my charge" %>
+    <%= f.check_box :negotiable %>
+  </div>
+
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
