--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
                               </li>
                               <li>
                                 <button class="btn btn-default btn-lg">
-                                  <a href="/new-pickup">Create New Pickup</a>
+                                  <%= link_to "Create a New Pickup", new_food_pickup_path %>
                                   </button>
                               </li>
                             <li class="divider"></li>
