--- a/app/views/food_pickups/new.html.erb
+++ b/app/views/food_pickups/new.html.erb
@@ -46,20 +46,8 @@
   <%= select_tag "reoccurrence", options_for_select(["None", "Daily", "Weekly", "Monthly", "Yearly"]) %>
 </div>
 
-<div>
-  <% if current_donor.type_of_donor == 'Event Company' %>
-    <%= label_tag "Number of guests" %><br />
-    <%= number_field_tag :number, nil, min: 100 %>
-  <% elsif current_donor.type_of_donor == 'Office' %>
-    <%= label_tag "Pick-up Cost" %><br />
-    <%= text_field_tag :number, 20, :readonly => true %>
-  <% elsif current_donor.type_of_donor == 'Restaurant' %>
-    <%= label_tag "Pick-up Cost" %><br />
-    <%= text_field_tag :number, 10, :readonly => true %>
-  <% else %>
-    <%= label_tag "Pick-up Cost" %><br />
-    <%= text_field_tag :number, 100, :readonly => true %>
-  <% end %>
+<div class="field">
+  <%= label_tag "You will be charged #{number_to_currency(current_donor.charge)}" %>
 </div>
 
 <%= submit_tag "Submit" %>
