--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -46,6 +46,9 @@
                             </tbody>
                         </table>
                       </div>
+                      <div class="panel-heading">
+                          Approved Donor Profiles
+                      </div>
                         <div class="panel-body">
                             <table width="100%" class="table table-striped table-bordered table-hover">
                                 <thead>
@@ -78,4 +81,5 @@
                         </div>
                       </div>
                     </div>
+                    <a href="/admin">Return to Home Page</a>
                   </div>
