--- a/app/views/donors/admin_index.html.erb
+++ b/app/views/donors/admin_index.html.erb
@@ -16,7 +16,7 @@
                         </div>
                         <div class="col-xs-9 text-right">
                             <div class="huge"> <%= @donor.count %> </div>
-                            <div>New Pending Profiles!</div>
+                            <div>Pending Profiles!</div>
                         </div>
                     </div>
                 </div>
@@ -44,7 +44,7 @@
                 </div>
                 <a href="#">
                     <div class="panel-footer">
-                        <span class="pull-left"><%= link_to 'View Details', new_pickup_path %></span>
+                        <span class="pull-left"><%= link_to 'View Details', new_food_pickup_path %></span>
                         <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                         <div class="clearfix"></div>
                     </div>
@@ -98,7 +98,55 @@
                         <!-- /.col-lg-4 (nested) -->
 
                   </div>
-                        <!-- /.col-lg-8 (nested) -->
+                    <!-- /.col-lg-8 (nested) -->
+
+              </div>
+            <!-- /.panel -->
+            <!-- /.panel -->
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <i class="fa fa-bar-chart-o fa-fw"></i> Negotiable Profiles
+                </div>
+                <!-- /.panel-heading First Table -->
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="table-responsive" >
+                                <table class="table table-bordered table-hover table-striped">
+                                    <thead>
+                                      <tr>
+                                          <th>Profile Submitted On</th>
+                                          <th>Business Name</th>
+                                          <th>Donor Type</th>
+                                          <th>Contact Name</th>
+                                          <th>Phone</th>
+                                          <th>Email</th>
+                                          <th>Address</th>
+                                      </tr>
+                                    </thead>
+                                    <tbody>
+                                      <% @negotiable_profiles.each do |donor| %>
+                                      <tr class="odd gradeX" >
+                                        <td><%= donor.created_at %></td>
+                                        <td><%= link_to "#{donor.business_name}", "/donor/#{donor.id}/negotiate" %></td>
+                                        <td><%= donor.type_of_donor %></td>
+                                        <td><%= donor.contact_name %></td>
+                                        <td><%= donor.phone_number %></td>
+                                        <td><%= donor.email %></td>
+                                        <td><%= donor.address %></td>
+                                      </tr>
+                                      <% end %>
+                                    </tbody>
+                                </table>
+                            </div>
+                            <!-- /.table-responsive -->
+                        </div>
+                      </div>
+                        <!-- /.col-lg-4 (nested) -->
+
+                  </div>
+                    <!-- /.col-lg-8 (nested) -->
+
               </div>
             <!-- /.panel -->
             <div class="panel panel-default">
