added carrier wave

--- a/app/views/food_pickups/new.html.erb
+++ b/app/views/food_pickups/new.html.erb
@@ -2,7 +2,7 @@
 
 <div class="field">
   <%= label_tag :picture %><br />
-  <%= text_field_tag :picture %>
+  <%= file_field_tag :picture %>
 </div>
 
 <div class="field">
