--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,11 +31,13 @@
                                   <%= link_to "Update User Profile", edit_donor_registration_path %>
                                 </button>
                               </li>
+                              <% if !current_donor.admin? %>
                               <li>
                                 <button class="btn btn-default btn-lg">
                                   <%= link_to "Create a New Pickup", new_food_pickup_path %>
                                   </button>
                               </li>
+                              <% end %>
                             <li class="divider"></li>
 
                             <li>
