--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -1,1 +1,2 @@
-<h2>Thanks, you paid <strong>$5.00</strong>!</h2>
+<h2>Thanks, you paid <strong><%= number_to_currency(current_donor.charge) %></strong>!</h2>
+<%= link_to "Home", root_path, class: "btn btn-primary" %>
