--- a/app/views/donors/admin_index.html.erb
+++ b/app/views/donors/admin_index.html.erb
@@ -178,7 +178,7 @@
                                             <td>{{pickup.start_time | date:'short'}}</td>
                                             <td>{{pickup.end_time | date:'short'}}</td>
                                             <td>{{pickup.location}}</td>
-                                            <td> <a href="/pickup/{{pickup.pickup_id}}"> View </a> </td>
+                                            <td> <a href="/food_pickups/{{pickup.pickup_id}}/edit"> View </a> </td>
                                         </tr>
                                     </tbody>
                                 </table>
