--- a/app/views/food_pickups/edit.html.erb
+++ b/app/views/food_pickups/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag("/pickup/#{@food_pickup.id}/edit", method: "patch") do %>
+<%= form_tag(food_pickup_path(@food_pickup.id), method: "patch") do %>
 <div>
   <img src="<%= @food_pickup.picture %>" alt="Food Picture" style="width=302px;height:228px">
 </div>
@@ -53,7 +53,6 @@
 </div>
 
 <div>
-  <%= @food_pickup.approved %>
 <%= label_tag "Approve Pickup:" %><br />
 <%= select_tag :approved, options_for_select([["Approved", true], ["Unapproved", false]], selected: @food_pickup.approved) %>
 </div>
